Fix: DrawsResponseByWinnerGoodsId, DrawsResponseByWaitlistGoodsId, RafflesResponseByGoods (#58)